[tool.poetry]
name = "Loyalty Points System"
version = "0.1.0"
description = ""
authors = ["Patrick Rachford <prachford@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
temporalio = "^1.1.0"
flask = {extras = ["async"], version = "^2.2.3"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
format = [{cmd = "black ."}, {cmd = "isort ."}]
lint = [{cmd = "black --check ."}, {cmd = "isort --check-only ."}]
